fix overflow of video header

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -5,6 +5,7 @@
 	width: 100%;
 	padding-top: $nav-height;
   position: relative;
+  overflow: auto;
 }
 
 // Navigation
